Downloading progress bar complete

--- a/app/src/main/res/layout/activity_download.xml
+++ b/app/src/main/res/layout/activity_download.xml
@@ -3,7 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginStart="32dp"
+    android:layout_marginEnd="32dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
+
 
     <ProgressBar
         android:layout_marginBottom="64dp"
@@ -11,7 +15,7 @@
         style="?android:attr/progressBarStyleHorizontal"
         android:id="@+id/progressBar1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="24dp" />
 
     <Button
         android:text="DOWNLOAD"
