--- a/app/src/main/res/layout/activity_download.xml
+++ b/app/src/main/res/layout/activity_download.xml
@@ -7,20 +7,26 @@
     android:layout_marginEnd="32dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
     <ProgressBar
-        android:layout_marginBottom="64dp"
-        app:layout_constraintBottom_toTopOf="@id/buttonDownload"
+        android:layout_centerInParent="true"
         style="?android:attr/progressBarStyleHorizontal"
         android:id="@+id/progressBar1"
         android:layout_width="match_parent"
         android:layout_height="24dp" />
 
     <Button
+        android:layout_marginTop="16dp"
+        android:layout_below="@id/progressBar1"
         android:text="DOWNLOAD"
         android:id="@+id/buttonDownload"
-        android:layout_marginBottom="240dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+
+
+    </RelativeLayout>
 
 </android.support.constraint.ConstraintLayout>
