--- a/app/src/main/res/layout/item_start.xml
+++ b/app/src/main/res/layout/item_start.xml
@@ -132,6 +132,14 @@
         android:drawableBottom="@drawable/ic_tag_faces_black_24px"
         />
 
+    <Button
+        android:id="@+id/buttonStart29"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Place Viever"
+        android:drawableBottom="@drawable/ic_tag_faces_black_24px"
+        />
+
 
 
 </LinearLayout>
