--- a/app/src/main/res/layout/activity_placeviever2.xml
+++ b/app/src/main/res/layout/activity_placeviever2.xml
@@ -8,7 +8,7 @@
 
 
     <ListView
-        android:id="@+id/listViewPlaceViever"
+        android:id="@+id/listViewPlaceViewer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toTopOf="@id/buttonAppInfo"
