--- a/app/src/main/res/layout/text_place_row.xml
+++ b/app/src/main/res/layout/text_place_row.xml
@@ -4,22 +4,11 @@
     android:id="@+id/Row"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
+    android:textSize="20sp"
+    android:background="@color/colorAccent"
+
+
     >
-
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:orientation="horizontal">
-
-        <ImageView
-
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-        <TextView
-            android:text="aaa"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-    </LinearLayout>
 
 
 
