Szymon - Layout - PlaceViever Adapter not works v1

--- a/app/src/main/res/layout/activity_placeviever2.xml
+++ b/app/src/main/res/layout/activity_placeviever2.xml
@@ -4,16 +4,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:padding="16dp">
 
 
     <ListView
         android:id="@+id/listViewPlaceViewer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@id/buttonAppInfo"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
         />
 
 
