--- a/app/src/main/res/layout/text_place_row.xml
+++ b/app/src/main/res/layout/text_place_row.xml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/Row"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:textSize="20sp"
-    android:background="@color/colorAccent"
-
-
+<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:id="@+id/layoutRow"
     >
 
 
+        <ImageView
+            android:id="@+id/imgPlaces"
+            android:layout_width="100dp"
+            android:layout_height="100dp"/>
 
-</TextView>
+        <TextView
+            android:id="@+id/txtPlaces"
+            android:layout_width="wrap_content"
+            android:layout_height="100dp" />
+
+</TableLayout>
