--- a/app/src/main/res/layout/activity_placeviever3.xml
+++ b/app/src/main/res/layout/activity_placeviever3.xml
@@ -35,7 +35,8 @@
     </LinearLayout>
 
     <TextView
-
+        android:id="@+id/textViewlayout3"
+        android:text="wwwwww"
         app:layout_constraintTop_toBottomOf="@id/linearLayout3"
         android:layout_width="match_parent"
         android:layout_height="200dp" />
