--- a/app/src/main/res/layout/item_start.xml
+++ b/app/src/main/res/layout/item_start.xml
@@ -140,6 +140,21 @@
         android:drawableBottom="@drawable/ic_tag_faces_black_24px"
         />
 
+    <Button
+        android:id="@+id/buttonStart30"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Rectangle Draw"
+        android:drawableBottom="@drawable/ic_tag_faces_black_24px"
+        />
+
+    <Button
+        android:id="@+id/buttonStart31"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Login Dialog"
+        android:drawableBottom="@drawable/ic_tag_faces_black_24px"
+        />
 
 
 </LinearLayout>
