--- a/app/src/main/res/layout/item_start.xml
+++ b/app/src/main/res/layout/item_start.xml
@@ -156,6 +156,14 @@
         android:drawableBottom="@drawable/ic_tag_faces_black_24px"
         />
 
+    <Button
+        android:id="@+id/buttonStart32"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Async Task"
+        android:drawableBottom="@drawable/ic_tag_faces_black_24px"
+        />
+
 
 </LinearLayout>
 
