--- a/app/src/main/res/layout/activity_rocket.xml
+++ b/app/src/main/res/layout/activity_rocket.xml
@@ -31,6 +31,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/rocket_recycler_view"
         android:visibility="visible"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
