--- a/app/src/main/res/layout/activity_buttoncounter.xml
+++ b/app/src/main/res/layout/activity_buttoncounter.xml
@@ -1,43 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
+    android:padding="16dp">
 
     <TextView
-        app:layout_constraintTop_toTopOf="parent"
+        android:id="@+id/textButtonCounter"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="100dp"
         android:gravity="center_horizontal"
-        android:textSize="20sp"
+        android:padding="16dp"
         android:text="0"
-        android:id="@+id/textButtonCounter"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:text="+1"
-        app:layout_constraintTop_toBottomOf="@id/textButtonCounter"
+        android:background="#c6ff00"
         android:id="@+id/buttonPlusCounter"
-        android:textSize="20sp"
-        android:padding="20sp"
-        android:layout_marginTop="40dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="80dp"
         android:layout_marginStart="80dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_marginTop="40dp"
+        android:padding="20sp"
+        android:text="+2"
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textButtonCounter" />
 
     <Button
-        android:text="-1"
-        app:layout_constraintTop_toBottomOf="@id/buttonPlusCounter"
+        android:background="#90cc00"
         android:id="@+id/buttonMinusCounter"
-        android:textSize="20sp"
-        android:padding="20sp"
-        android:layout_marginTop="40dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="80dp"
         android:layout_marginStart="80dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_marginTop="40dp"
+        android:padding="20sp"
+        android:text="-1"
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/buttonPlusCounter" />
 
 
 </android.support.constraint.ConstraintLayout>
