--- a/app/src/main/res/layout/item_rocket.xml
+++ b/app/src/main/res/layout/item_rocket.xml
@@ -5,16 +5,17 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="16dp"
+    android:padding="30dp"
     >
 
     <TextView
         android:id="@+id/rocket_id"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="3"
         android:text="TEST"
         />
+
 
 
 
