--- a/app/src/main/res/layout/item_start.xml
+++ b/app/src/main/res/layout/item_start.xml
@@ -14,11 +14,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="32dp"
-        android:text="@string/projectList"
-        android:gravity="center"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="64dp"
+            android:gravity="center"
+            android:text="@string/projectList" />
 
 
     <LinearLayout
@@ -81,9 +81,8 @@
         android:id="@+id/buttonStart10"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Life Cycle"
         android:drawableBottom="@drawable/ic_forward_black_24px"
-        />
+        android:text="Life Cycle" />
 
     <Button
         android:id="@+id/buttonStart12"
