--- a/app/src/main/res/layout/item_rocket_starts.xml
+++ b/app/src/main/res/layout/item_rocket_starts.xml
@@ -4,18 +4,23 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="8dp"
+    android:weightSum="4"
     >
+
+    <ImageView
+        android:src="@drawable/ic_add_a_photo_black_24px"
+        android:id="@+id/picture_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        />
 
     <TextView
         android:id="@+id/rocket_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
+        android:layout_weight="3"
         android:text="TEST"
         />
-
-
-
 
 </LinearLayout>
