adding activities to new packages

--- a/app/src/main/res/layout/activity_rectangle_draw.xml
+++ b/app/src/main/res/layout/activity_rectangle_draw.xml
@@ -7,7 +7,7 @@
 
 
     <view
-        class="com.example.robert.myapplication1.RectangleDrawView"
+        class="com.example.robert.myapplication1.simpleworks.RectangleDrawView"
         id="@+id/view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
