--- a/app/src/main/res/layout/activity_recycler_view.xml
+++ b/app/src/main/res/layout/activity_recycler_view.xml
@@ -3,13 +3,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:src="@drawable/ic_add_black_24dp"
+        android:layout_margin="16dp" />
 
     <android.support.v7.widget.RecyclerView
-
         android:id="@+id/studentRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
     </android.support.v7.widget.RecyclerView>
 
 </RelativeLayout>
