--- a/app/src/main/res/layout/item_rocket_starts.xml
+++ b/app/src/main/res/layout/item_rocket_starts.xml
@@ -16,6 +16,7 @@
         />
 
     <TextView
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
         android:id="@+id/rocket_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
