--- a/app/src/main/res/layout/activity_text_input_layout.xml
+++ b/app/src/main/res/layout/activity_text_input_layout.xml
@@ -1,4 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<android.support.design.widget.CoordinatorLayout
+    android:id="@+id/myCoordinatorLayout"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+
+
+
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
@@ -13,13 +24,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:counterMaxLength="5">
 
         <android.support.design.widget.TextInputEditText
             android:id="@+id/textInputUserName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="User Name"
+            android:hint="User Name / email adress"
             android:padding="16dp"
             android:inputType="textEmailAddress"
             />
@@ -28,14 +40,15 @@
 
 
     <android.support.design.widget.TextInputLayout
-        android:id="@+id/TilPassword"
+        android:id="@+id/tilPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/TilUserName">
+        app:layout_constraintTop_toBottomOf="@+id/TilUserName"
+        app:passwordToggleEnabled="true">
 
         <android.support.design.widget.TextInputEditText
             android:id="@+id/textInputPassword"
@@ -55,10 +68,12 @@
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/TilPassword"
+        app:layout_constraintTop_toBottomOf="@id/tilPassword"
         android:padding="32dp"
         android:layout_marginTop="16dp"
         />
 
 
 </android.support.constraint.ConstraintLayout>
+
+</android.support.design.widget.CoordinatorLayout>
