--- a/app/src/main/res/layout/item_rocket.xml
+++ b/app/src/main/res/layout/item_rocket.xml
@@ -1,20 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="8dp"
+    android:padding="4dp"
     >
+
+    <android.support.v7.widget.CardView
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/card_view"
+        android:layout_gravity="center"
+        android:layout_margin="8dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        card_view:cardCornerRadius="4dp"
+        card_view:cardElevation="10dp"
+        >
 
     <TextView
         android:id="@+id/rocket_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
         android:text="TEST"
+        android:padding="8dp"
         />
 
+    </android.support.v7.widget.CardView>
 
 
 
