--- a/app/src/main/res/layout/item_rocket_starts.xml
+++ b/app/src/main/res/layout/item_rocket_starts.xml
@@ -1,10 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:padding="8dp"
+    >
+
+    <android.support.v7.widget.CardView
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/card_view"
+        android:layout_gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        card_view:cardCornerRadius="8dp"
+        android:padding="8dp"
+        android:layout_margin="8dp"
+
+        >
+
+
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:weightSum="4"
+    android:padding="8dp"
     >
 
     <ImageView
@@ -23,5 +45,10 @@
         android:layout_weight="3"
         android:text="TEST"
         />
+
+</LinearLayout>
+
+    </android.support.v7.widget.CardView>
+
 
 </LinearLayout>
