--- a/app/src/main/res/layout/activity_text_input_layout.xml
+++ b/app/src/main/res/layout/activity_text_input_layout.xml
@@ -8,8 +8,6 @@
     android:layout_height="match_parent">
 
 
-
-
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
@@ -64,12 +62,12 @@
     <Button
         android:id="@+id/buttonTextInput"
         android:text="LOGIN"
-        android:layout_width="match_parent"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tilPassword"
-        android:padding="32dp"
+        android:padding="20dp"
         android:layout_marginTop="16dp"
         />
 
