--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#3f51b5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimaryDark">#000F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="white">#FFF</color>
     <color name="Indigo900">#1a237e</color>
     <color name="Blue50">#E3F2FD</color>
     <color name="Blue100">#BBDEFB</color>
+    <color name="Purple500">#9C27B0</color>
+    <color name="Green500">#4CAF50</color>
 
 </resources>
