--- a/app/src/main/res/layout/activity_database_student.xml
+++ b/app/src/main/res/layout/activity_database_student.xml
@@ -3,82 +3,71 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="40dp">
+
         <EditText
             android:id="@+id/etStudentName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:text="@string/student_name"
-            android:textAlignment="center" />
+            android:hint="@string/student_name"
+            />
         <EditText
             android:id="@+id/etStudentSurname"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:text="@string/student_surname"
-            android:textAlignment="center" />
+            android:hint="@string/student_surname" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="@string/grades" />
+            android:text="@string/grades"
+            android:textSize="16dp"
+            android:padding="16dp"
+            android:layout_gravity="center"/>
         <Spinner
             android:id="@+id/spinnerStudentGrade"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
             android:entries="@array/grades"
             android:prompt="@string/grades"
-            android:textAlignment="center" />
+            android:padding="16dp"
+            android:layout_gravity="center"
+            />
         <RadioButton
             android:id="@+id/rbStudentDrunk"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text= "@string/is_drunk"
+            android:padding="16dp"
             android:layout_gravity="center"
-            android:layout_margin="16dp"
-            android:text="@string/is_drunk" />
+            android:checked="false"/>
         <EditText
             android:id="@+id/etStudentAccountValue"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
             android:inputType="number"
-            android:text="@string/acount_value"
-            android:textAlignment="center" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="@string/address" />
+            android:hint="@string/acount_value" />
         <EditText
             android:id="@+id/edStudentStreet"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:text="@string/street"
-            android:layout_marginBottom="16dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"/>
+            android:hint="@string/street" />
         <EditText
             android:id="@+id/edStudentCity"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:text="@string/city"
-            android:layout_margin="16dp"/>
+            android:hint="@string/city"/>
         <EditText
             android:id="@+id/edStudentNumberAddress"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:text="@string/number"
-            android:layout_margin="16dp"/>
+            android:hint="@string/number"/>
         <Button
-            android:id="@+id/btStudentSaveStudent"
+            android:id="@+id/btSaveStudent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/save_student"
